--- a/styles.css
+++ b/styles.css
@@ -268,10 +268,13 @@ Grocery List
   align-items: center;
   justify-content: space-between;
   margin-bottom: 0.5rem;
-  transition: var(--transition);
+  
   padding: 0.25rem 1rem;
   border-radius: var(--radius);
   text-transform: capitalize;
+  transition: all 0.5s ease;
+  /* transition: var(--transition); */
+
 }
 .grocery-item:hover {
   color: var(--clr-grey-5);
@@ -332,4 +335,9 @@ Grocery List
 .completed {
   text-decoration: line-through;
   opacity: 0.5;
+}
+
+.fall {
+  transform: translateY(8rem) rotateZ(20deg);
+  opacity: 0;
 }
